--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 aniso8601==9.0.1
+certifi==2021.5.30
 cffi==1.14.5
+chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
 Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+idna==2.10
+imgurpython==1.1.7
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+mysql-connector-python==8.0.25
+mysqlclient==2.0.3
+Pillow==8.2.0
+protobuf==3.17.3
 pycparser==2.20
 PyJWT==2.1.0
 PyMySQL==1.0.2
 PyNaCl==1.4.0
 python-dotenv==0.17.1
 pytz==2021.1
+requests==2.25.1
 six==1.16.0
-SQLAlchemy==1.4.18
+urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
