--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,24 @@ cffi==1.14.5
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
+decorator==4.4.2
+filetype==1.0.7
 Flask==2.0.1
 Flask-RESTful==0.3.9
 greenlet==1.1.0
 idna==2.10
+imageio==2.9.0
+imageio-ffmpeg==0.4.4
 imgurpython==1.1.7
 itsdangerous==2.0.1
 Jinja2==3.0.1
+libmagic==1.0
 MarkupSafe==2.0.1
 mysql-connector-python==8.0.25
 mysqlclient==2.0.3
+numpy==1.21.0
 Pillow==8.2.0
+proglog==0.1.9
 protobuf==3.17.3
 pycparser==2.20
 PyJWT==2.1.0
@@ -23,7 +30,9 @@ PyNaCl==1.4.0
 python-dotenv==0.17.1
 pytz==2021.1
 requests==2.25.1
+scipy==1.7.0
 six==1.16.0
+tqdm==4.61.1
 urllib3==1.26.6
 Werkzeug==2.0.1
 WTForms==2.3.3
