--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filetype==1.0.7
 Flask==2.0.1
 Flask-RESTful==0.3.9
 greenlet==1.1.0
+gunicorn==20.1.0
 idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.4
@@ -34,5 +35,6 @@ scipy==1.7.0
 six==1.16.0
 tqdm==4.61.1
 urllib3==1.26.6
+waitress==2.0.0
 Werkzeug==2.0.1
 WTForms==2.3.3
